Cambio de la sidebar parcialmente implementado
